versioned_docs/version-5.4/client-api/commands/documents/content/_put-nodejs.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

* Use `PutDocumentCommand` to insert a document to the database or update an existing document.

* In this page:

   * [Example](../../../../client-api/commands/documents/put.mdx#example)
   * [Syntax](../../../../client-api/commands/documents/put.mdx#syntax)

</Admonition>
## Example

<TabItem value="put" label="put">
<CodeBlock language="js">
{`_document_1
        // Define the json document to 'put'
        const jsonDocument = \{
            name: "My category",
            description: "My category description",
            "@metadata": \{
                "@collection": "categories"
            \}
        \}
        
        // Define the 'PutDocumentCommand'
        // Pass the document ID, whether to make concurrency checks, 
        // and the json document to store
        const command = new PutDocumentCommand("categories/999", null, jsonDocument);

        // Call 'execute' on the Store Request Executor to send the command to the server
        await documentStore.getRequestExecutor().execute(command);

        // Access the command result
        const result = command.result;
        const theDocumentID = result.id;
        const theDocumentCV = result.changeVector;
        
        assert.strictEqual(theDocumentID, "categories/999");
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="js">
{`PutDocumentCommand(id, changeVector, document);
`}
</CodeBlock>
</TabItem>

| Parameter        | Type     | Description                                                             |
|------------------|----------|-------------------------------------------------------------------------|
| **id**           | `string` | Unique ID under which document will be stored                           |
| **changeVector** | `string` | Entity changeVector, used for concurrency checks (`null` to skip check) |
| **document**     | `object` | The document to store.                                                  |

<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="js">
{`// Executing \`PutDocumentCommand\` returns the following object:
\{
    // The document id under which the entity was stored
    id; // string
    
    // The change vector assigned to the stored document
    changeVector; // string
\}
`}
</CodeBlock>
</TabItem>




