versioned_docs/version-6.0/client-api/commands/documents/content/_put-nodejs.mdx
import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';

<Admonition type="note" title="">

* Use the low-level `PutDocumentCommand` to insert a new document to the database or update an existing document.

* When using `PutDocumentCommand`, you must explicitly **specify the collection** to which the document will belong,
  otherwise, the document will be placed in the `@empty` collection. See how this is done in the example below.

* To insert a document to the database using a higher-level method, see [storing entities](../../../../client-api/session/storing-entities.mdx).  
  To update an existing document using a higher-level method, see [update entities](../../../../client-api/session/updating-entities.mdx).

* In this page:

   * [Examples](../../../../client-api/commands/documents/put.mdx#examples)
   * [Syntax](../../../../client-api/commands/documents/put.mdx#syntax)

</Admonition>
## Examples

<Admonition type="note" title="">

**Put document command - using the Store's request executor**:
<TabItem value="put_document_1" label="put_document_1">
<CodeBlock language="js">
{`// Define the json document to 'put'
const jsonDocument = \{
    name: "My category",
    description: "My category description",
    "@metadata": \{
        "@collection": "categories"
    \}
\}

// Define the 'PutDocumentCommand'
// Pass the document ID, whether to make concurrency checks, 
// and the json document to store
const command = new PutDocumentCommand("categories/999", null, jsonDocument);

// Call 'execute' on the Store Request Executor to send the command to the server
await documentStore.getRequestExecutor().execute(command);

// Access the command result
const result = command.result;
const theDocumentID = result.id;
const theDocumentCV = result.changeVector;

assert.strictEqual(theDocumentID, "categories/999");
`}
</CodeBlock>
</TabItem>

</Admonition>
<Admonition type="note" title="">

**Put document command - using the Session's request executor**:
<TabItem value="put_document_2" label="put_document_2">
<CodeBlock language="js">
{`const session = documentStore.openSession();

// Create a new entity
const category = new Category();
category.name = "My category";
category.description = "My category description";

// To be able to specify under which collection the document should be stored 
// you need to convert the entity to a json document first.

// Passing the entity as is instead of the json document
// will result in storing the document under the "@empty" collection.

const documentInfo = new DocumentInfo();
documentInfo.collection = "categories"; // The target collection
const jsonDocument = EntityToJson.convertEntityToJson(
    category, documentStore.conventions, documentInfo);

// Define the 'PutDocumentCommand'
// Pass the document ID, whether to make concurrency checks,
// and the json document to store
const command = new PutDocumentCommand("categories/999", null, jsonDocument);

// Call 'execute' on the Session Request Executor to send the command to the server
await session.advanced.requestExecutor.execute(command);

// Access the command result
const result = command.result;
const theDocumentID = result.id;
const theDocumentCV = result.changeVector;

assert.strictEqual(theDocumentID, "categories/999");
`}
</CodeBlock>
</TabItem>

</Admonition>


## Syntax

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="js">
{`PutDocumentCommand(id, changeVector, document);
`}
</CodeBlock>
</TabItem>

| Parameter        | Type     | Description                                                                                                                                                                                                                                          |
|------------------|----------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
| **id**           | `string` | Unique ID under which document will be stored.                                                                                                                                                                                                       |
| **changeVector** | `string` | The change-vector of the document you wish to update,<br/>used for [optimistic concurrency control](../../../../server/clustering/replication/change-vector.mdx#concurrency-control--change-vectors).<br/>Pass `null` to skip the check and force the 'put'. |
| **document**     | `object` | The document to store.                                                                                                                                                                                                                               |

<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="js">
{`// Executing \`PutDocumentCommand\` returns the following object:
\{
    // The document id under which the entity was stored
    id; // string
    
    // The change vector assigned to the stored document
    changeVector; // string
\}
`}
</CodeBlock>
</TabItem>




